Still fixing z-index, Fixes #18.

--- a/src/sizeguide/SizeGuide.scss
+++ b/src/sizeguide/SizeGuide.scss
@@ -29,7 +29,7 @@ a.link-btn.size-guide {
   color: black !important;
   background-color: #fff18f !important;
   opacity: 1 !important;
-  z-index: 10 !important;
+  z-index: 15 !important;
   padding: 10px 10px !important;
   border-radius: 5px !important;
 
